# serverless-talk-demo

./: .gitignore  Makefile  README.md  netlify.toml  package-lock.json  package.json  rust-toolchain
crates/generate_image/: Cargo.toml
crates/generate_image/src/: main.rs
crates/webhooks_twilio/: Cargo.toml
crates/webhooks_twilio/src/: main.rs
crates/webhooks_twilio_rs/: Cargo.toml
crates/webhooks_twilio_rs/src/: main.rs
image-component/: package-lock.json  package.json  rollup.config.js
image-component/src/: ato-logo.js  cockroachlabs-logo.js  image.js  noise-rings.js  prisma-logo.js  shout-out.js  twitter-logo.js
netlify/functions/: generate_image_js.js  list.js  webhooks_twilio_js.js
netlify/functions/generate_image_rs/: Cargo.toml
netlify/functions/generate_image_rs/src/: main.rs
netlify/functions/webhooks_twilio_rs/: Cargo.toml
netlify/functions/webhooks_twilio_rs/src/: main.rs
netlify/lib/: getUserData.js  withVerifyTwilio.js
pages/: index.js
prisma/: schema.prisma
sql_scripts/: create_table.sql  insert_message.sql
