[package]
name = "webhooks_twilio"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
tokio = { version = "1.11.0", features = ["full"] }
lambda_runtime = "0.4.1"
serde_json = "1.0.67"
http = "0.2.4"
rust-crypto = "0.2"
url = "2.0.0"
