[package]
name = "webhooks_twilio"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13"
http = "0.2.4"
lambda_runtime = "0.4.1"
rust-crypto = "0.2"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
sqlx = { version = "0.5.9", features = [
  "json",
  "postgres",
  "runtime-tokio-rustls",
  "time",
  "uuid",
] }
tokio = { version = "1.11.0", features = ["full"] }
url = "2.0.0"
