[package]
name = "webhooks_twilio_rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
tokio = { version = "1.11.0", features = ["full"] }
serde_json = "1.0.67"
lamedh_http = "0.3.0"
twilio = "1.0.0"
