[package]
name = "generate_image_rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws_lambda_events = "0.5.0"
lambda_runtime = "0.4.1"
serde = "1.0.130"
tokio = "1.12.0"
# og_image_writer = { path = "og_image_writer/og_image_writer" }
og_image_writer = { git = "https://github.com/aydrian/og_image_writer" }
http = "0.2.5"
base64 = "0.13.0"
image = "0.23.14"
reqwest = { version = "0.11.4", default-features = false, features = [
  "json",
  "rustls-tls",
  "blocking",
] }
rand = "0.8.4"
