[package]
name = "webhooks_twilio_rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws_lambda_events = "0.5.0"
serde = { version = "1.0.130", features = ["derive"] }
tokio = { version = "1.11.0", features = ["full"] }
lambda_runtime = "0.4.1"
http = "0.2.4"
rust-crypto = "0.2"
url = "2.0.0"
base64 = "0.13"
